new image added, large but for a purpose

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to the store</h1>
 <h2> We sell a lot of things </h2>
-<% image_tag("store.jpg") %>
+ <%= image_tag("store.jpg", class: "img-responsive") %>
+
